--- a/index.html
+++ b/index.html
@@ -6,13 +6,14 @@
       <meta name="viewport" content="width=device-width, initial-scale=1.0">
       <title>YOUTUBE HTML</title>
       <link rel="stylesheet" href="./style.css" />
+      <script src="./index.js"></script>
 </head>
 
 <div>
       <!-- header -->
       <header class="main-header">
             <div class="navleft">
-                  <img src="images/menu.png" alt="menu" />
+                  <img src="images/menu.png" alt="menu"  class="men"/>
                   <img src="images/logo.png" alt="logo" />
 
             </div>
@@ -229,6 +230,8 @@
             <div class="footright"></div>
       </footer>
       <!-- footer -->
+    
+
       </body>
 
 </html>
